--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main">
     <header>
-        <h1>It's not easy bing green</h1>
+        <h1>It's not easy being green</h1>
     </header>
 
     <footer>
