--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
     <div class="main">
     <header>
-        <h1>It's not easy being <span id="green">green</span></h1>
+        <h1>It's not easy being <span id="green">green.</span></h1>
     </header>
     <section>
-        <p>Watch this space</p>
+        <p>Watch this space.</p>
     </section>
     <footer>
         <a href="https://www.instagram.com/greensnoteasy/" target="_blank"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 86 86">
