--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main">
     <header>
-        <h1>It's not easy being <span id="green">green.</span></h1>
+        <h1>It's not easy being <span id="green">green?</span></h1>
     </header>
     <section>
         <p>Watch this space.</p>
