--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 <body>
     <div class="main">
     <header>
-        <h1>It's not easy being <span id="green">green?</span></h1>
+        <h1>It's not easy being <span class="green">green?</span></h1>
     </header>
     <section>
-        <p>Watch this space.</p>
+        <p>With worries around climate change, a growing population and scarce resources it has become apparent that designers now more than ever need to consider the sustainable implications of their products. But what does it mean to be “green”? earth domes, flip flops and vegetables immediately spring to mind. But for us, a collective of 3rd year Sustainable Product Design students. Sustainable or Green design is about designing meaningful products that really consider the people they are intended for, as well as the social and environmental impact manufacturing the product may have. Our show at New Designers London will present our concepts for sustainable product design. As Victor Papanek said “Design, if it is to be ecologically responsible and socially responsive, must be revolutionary and radical.” So follow us, and come see our revolutionary and radical designs at our end of year show.</p>
+        <p class="green"><b>Watch this space</b></p>
     </section>
     <footer>
         <a href="https://www.instagram.com/greensnoteasy/" target="_blank"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 86 86">
