--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Degree show</title>
-    <meta name="description" content="Sustainable Product Design 3rd year degree show, It's Not Easy Bing Green">
-    <meta name="keywords" content="SPD,Design,New Designers,Sustainable">
+    <meta name="description" content="Sustainable Product Design 3rd year New Designers show, It's Not Easy Bing Green?">
+    <meta name="keywords" content="SPD,Design,New Designers,Sustainable,sustainable product design">
     <meta name="author" content="Elliot Lunn">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
