--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:700" rel="stylesheet">
     <meta charset="utf-8">
     <title>Degree show</title>
     <meta name="description" content="Sustainable Product Design 3rd year New Designers show, It's Not Easy Bing Green?">
