--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="SPD,Design,New Designers,Sustainable,sustainable product design">
     <meta name="author" content="Elliot Lunn">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="images/fav.png">
 </head>
 <body>
     <div class="main">
