--- a/index.html
+++ b/index.html
@@ -1,33 +1,24 @@
-<!doctype html>
+---
+layout: default
+---
 
-<html lang="en">
-<head>
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:700" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
-    <meta charset="utf-8">
-    <title>Degree show</title>
-    <meta name="description" content="Sustainable Product Design 3rd year New Designers show, It's Not Easy Bing Green?">
-    <meta name="keywords" content="SPD,Design,New Designers,Sustainable,sustainable product design">
-    <meta name="author" content="Elliot Lunn">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/fav.png">
-</head>
-<body>
-    <div class="main">
-    <header>
-        <h1>It's not easy being <span class="green">green?</span></h1>
-    </header>
-    <section>
-        <p id="about">With worries around climate change, a growing population and scarce resources it has become apparent that designers now, more than ever, need to consider the sustainable implications of their products. But what does it mean to be “green”? Earth domes, flip flops and vegetables immediately spring to mind. However for us, a collective of 3rd year Sustainable Product Design students, Sustainable or Green Design is about designing meaningful products that really consider the people they are intended for, as well as the social and environmental impact manufacturing the product may have. Our 2018 show at New Designers London will present our concepts for Sustainable Product Design. As Victor Papanek said “Design, if it is to be ecologically responsible and socially responsive, must be revolutionary and radical.” So follow us, and come see our revolutionary and radical designs at our end of year show.</p>
-        <p class="green"><b>Watch this space</b></p>
-    </section>
-    <footer>
-        <a href="https://www.instagram.com/greensnoteasy/" target="_blank"><svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 86 86">
-        <path class="cls-1" d="M320,609a41,41,0,1,1,41-41A41,41,0,0,1,320,609Zm0-80a39,39,0,1,0,39,39A39,39,0,0,0,320,529Z" transform="translate(-277 -525)"/>
-        <path class="cls-2" d="M331,550H309a7,7,0,0,0-7,7V579a7,7,0,0,0,7,7H331a7,7,0,0,0,7-7V557A7,7,0,0,0,331,550Zm2,4.15h.79v6.1l-6.08,0,0-6.1Zm-18.17,10.15a6.32,6.32,0,1,1-1.2,3.69A6.33,6.33,0,0,1,314.87,564.31ZM334.5,579a3.45,3.45,0,0,1-3.45,3.45H309a3.45,3.45,0,0,1-3.45-3.45V564.31h5.37a9.84,9.84,0,1,0,18.24,0h5.37Z" transform="translate(-277 -525)"/>
-        </svg>
-        </a>
-    </footer>
-    </div>
-</body>
-</html>
+<div class="container">
+                <div class="row">
+                    <div class="twelve columns">
+                        <div class="slideContainer">
+                        <div id="slideshow">
+                           <div class="homeImg">
+                             <img src="{{site.baseurl}}images/homepage/20171129_134556.jpg">
+                           </div>
+                           <div class="homeImg">
+                             <img src="{{site.baseurl}}images/homepage/IMG_1172-2.jpg">
+                           </div>
+                           <div class="homeImg">
+                             <img src="{{site.baseurl}}images/homepage/IMG_20171116_121758.jpg">
+                           </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    
