--- a/profiles/benny.html
+++ b/profiles/benny.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}images/profiles/benny.png" alt="Arthur Profil Picture">
+                        <img class="profilePic" src="{{site.baseurl}}images/profiles/benny.png" alt="Benny Profil Picture" title="Benny">
                     </div>
                 </div> 
                 <div class="row">
