--- a/profiles/wiktoria.html
+++ b/profiles/wiktoria.html
@@ -31,6 +31,7 @@ layout: default
                         <p>I like a good human-centered design, all products should serve the people, instead making their life harder. Nature in itself is a good place to start when searching for the answer to our design challenges - structure, purpose and renewability are the backbone of a proper design.
                         I would like to become a system developer - creating beautiful, responsive apps and websites.
                         </p>
+                        <p><strong>I AM ALSO A VEGAN AND LIKE PRETENTIOUS WORDS</strong></p>
                     </div>
                 </div>
             </div>
