--- a/who.html
+++ b/who.html
@@ -128,7 +128,7 @@ layout: default
                             
                             <div class="profile">
 <!--                                <a href="{{site.baseurl}}profiles/saxson.html">-->
-                                <img src="{{site.baseurl}}images/profiles/saxson.png" alt="profile picture" title="Saxson"><h1>Saxson</h1>
+                                <img src="{{site.baseurl}}images/profiles/saxson.png" alt="profile picture" title="Saxson"><h1>Saxon</h1>
 <!--                                </a>-->
                             </div>
                             
