--- a/who.html
+++ b/who.html
@@ -134,7 +134,7 @@ layout: default
                             
                             <div class="profile">
 <!--                                <a href="{{site.baseurl}}profiles/sky.html">-->
-                                <img src="{{site.baseurl}}images/profiles/sky.png" alt="profile picture" title="Sky"><h1>Sky</h1>
+                                <img src="{{site.baseurl}}images/profiles/sky.png" alt="profile picture" title="Sky"><h1>Skye</h1>
 <!--                                </a>-->
                             </div>
                             
