--- a/who.html
+++ b/who.html
@@ -25,9 +25,9 @@ layout: default
                     <div class="twelve columns">
                         <div class="profiles">
                             <div class="profile">
-<!--                                <a href="{{site.baseurl}}profiles/arthur.html">-->
+                                <a href="{{site.baseurl}}profiles/arthur.html">
                                     <img src="{{site.baseurl}}images/profiles/arthur.png"><h1>Arthur</h1>
-<!--                                </a>-->
+                                </a>
                             </div>
                             
                             <div class="profile">
