--- a/sponsors.html
+++ b/sponsors.html
@@ -12,7 +12,7 @@ layout: default
                 </div>
                 <div class="row">
                     <div class="nine columns">
-                        <p>If you wish to help us get to New Designers, please get in <a href="contact.html">contact.</a></p>
+                        <p>If you wish to help us get to New Designers, please get in <a href="{{site.baseurl}}/contact.html">contact.</a></p>
                     </div>
                 </div>
             </div>
