--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@ layout: default
                         <div class="slideContainer">
                         <div id="slideshow">
                            <div class="homeImg">
-                             <img src="{{site.baseurl}}images/homepage/20171129_134556.jpg">
+                             <img src="{{site.baseurl}}/images/homepage/c375e950035241.58c5d779bf9e0.jpg">
                            </div>
                            <div class="homeImg">
-                             <img src="{{site.baseurl}}images/homepage/IMG_1172-2.jpg">
+                             <img src="{{site.baseurl}}/images/homepage/20171129_134556.jpg">
                            </div>
                            <div class="homeImg">
-                             <img src="{{site.baseurl}}images/homepage/IMG_20171116_121758.jpg">
+                             <img src="{{site.baseurl}}/images/homepage/IMG_1172-2.jpg">
+                           </div>
+                           <div class="homeImg">
+                             <img src="{{site.baseurl}}/images/homepage/IMG_20171116_121758.jpg">
                            </div>
                         </div>
                         </div>
