--- a/profiles/drew.html
+++ b/profiles/drew.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}images/profiles/drew.png" alt="Drew Profil Picture" title="Drew">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/drew.png" alt="Drew Profil Picture" title="Drew">
                     </div>
                 </div> 
                 <div class="row">
@@ -28,8 +28,9 @@ layout: default
                         <h2>Drew Spathaky</h2>
                         <p>“Design is inherently optimistic, that is it’s power” - William McDonough
                         Good design improves the lives of everyone connected to it.
-                        For that reason literally everything inspires me. I find inspiration in anything I do at all times. For some projects I’m fascinated by materials whereas for others the use might peak my interest.
-                        I want to go somewhere I can make a difference, any company that can provide that has me hooked.
+                        For that reason literally everything inspires me. I find inspiration in anything I do at all times. For some projects I’m fascinated by materials whereas for others the use might peak my interest.</p>
+                        
+                        <p>I want to go somewhere I can make a difference, any company that can provide that has me hooked.
                         In all honesty, I spend a lot of time bouncing between hobbies but design is the only thing I truly enjoy doing.
                         </p>
                     </div>
