--- a/profiles/Luke.html
+++ b/profiles/Luke.html
@@ -26,11 +26,11 @@ layout: default
                         </div>
                         <hr>
                         <h2>Luke Samson-Hill</h2>
-                        <p>Designing and making things has always been something which has driven me. I am inspired everyday by good pieces of design, as well as spurred on by bad pieces. Good design to me is a lot about the craftsmanship, something which is designed and built in such a way that it would last a lifetime. Because of this I am incredibly interested in designing products around longevity, something which people can use for many years while forming emotional bonds with.</p>
+                        <p>Designing and making things has always been something which has driven me. I am inspired everyday by good pieces of design, as well as spurred on by bad pieces. Good design to me is a lot about the craftsmanship, something which is designed and built in such a way that it would last a lifetime. Because of this I am incredibly interested in designing products around longevity, something which people can use for many years whilst forming emotional bonds.</p>
                         
                         <p>After I finish university I want to carry on designing and making well crafted objects. I am unsure what path this may take me down but I’ve always been someone to go somewhere else and try something new, for this reason I will welcome any opportunity given to me.</p>
                         
-                        <p>Outside of university I spend a lot of time in the outdoors, I spend a lot of time out climbing, walking and swimming. This has given me great respect for the environment as well as encouragement to look after it.</p>
+                        <p>Outside of university I spend a lot of time in the outdoors, I spend a lot of time out climbing, walking and swimming. This has given me great respect for the environment as well as encouraging me to look after it.</p>
                     </div>
                 </div>
             </div>
