--- a/profiles/ashu.html
+++ b/profiles/ashu.html
@@ -28,11 +28,11 @@ layout: default
                         <h2>Ashu Sharma</h2>
                         <p>I feel that good design is a design which helps bring about positive change without being too obvious.</p>
 
-                        <p>There are two things which inspire me to carry on designing, the feeling of creating a good design and making the final model in the end which works and solves the problem and the fact that the design is helping about to being a posotive change.</p>
+                        <p>There are two things which inspire me to carry on designing, the feeling of creating a good design and making the final model in the end which works and solves the problem and the fact that the design is helping about to being a positive change.</p>
 
-                        <p>I would love to work anywhere specially in places which help bring about meaningful changes in countries that need it.</p>
+                        <p>I would love to work anywhere that helps bring about meaningful changes in countries that need it.</p>
 
-                        <p>My personal aim to to create a company which brings together different sectors of work together to create meaningful design through calibration and hard work.</p>
+                        <p>My personal aim is to create a company which brings together different professions to create meaningful design through collaboration.</p>
                     </div>
                 </div>
             </div>
