--- a/profiles/cassie.html
+++ b/profiles/cassie.html
@@ -26,11 +26,11 @@ layout: default
                         </div>
                         <hr>
                         <h2>Cassie Aspden</h2>
-                        <p>In this world that need to be addressed and resolved over time, and I strongly believe sustainable design can contribute to this change.</p>
+                        <p>Design is powerful tool that influences the way we work, behave and live. There are several problems and difficulties in this world that need to be addressed and resolved over time, and I strongly believe sustainable design can contribute to this change. </p>
 
                         <p>For me, the natural world acts as a major inspiration for my work. I strongly believe Biophilic Design can alter the way we live, primarily for improving our health and wellbeing. In my mind, we have created a barrier between nature and society and we underestimate the importance of our primal urge to connect with the natural world. Therefore, I aspire to work towards encouraging healthier and more sustainable lifestyles through following Biophilic Design principles.</p> 
 
-                        <p>My time at Falmouth University has allowed me the opportunity to discover my true interests as a sustainable designer. Strengthening my creative, professionalism and team working skills, as well as presenting my designs to successful companies and organisations, have given me the confidence to pursue my ambition in the design world.</p>
+                        <p>My time at Falmouth University has allowed me the opportunity to discover my true interests as a sustainable designer. Strengthening my creative, professional and team working skills, as well as presenting my designs to successful companies and organisations, have has given me the confidence to pursue my ambition in the design world.</p>
 
                         <p>In 2018, I will be travelling various countries to widen my knowledge and experiences of different cultures. Following that, I aspire to work for a environmentally-conscious business that allows me to work creatively and pursue my goal towards encouraging sustainable, healthier and happier lifestyles, through the practice of design.</p>
                     </div>
