--- a/profiles/connie.html
+++ b/profiles/connie.html
@@ -30,7 +30,7 @@ layout: default
                         
                         <p>I am inspired by the powers of nature, the way it quietly gets on with everything and keeps things moving. Through taking notes from the natural world we can create designs and systems that will sustain our future.</p>
                         
-                        <p>As a designer I aim to enhance peoples interaction with the natural space around them and improve peoples wellbeing. I enjoy textile crafts and spending time outdoors which helps me to connect with my environment</p>
+                        <p>As a designer I aim to enhance people's interaction with the natural space around them and improve people's wellbeing. I enjoy textile crafts and spending time outdoors which helps me to connect with my environment</p>
                     </div>
                 </div>
             </div>
