--- a/profiles/elliot.html
+++ b/profiles/elliot.html
@@ -28,9 +28,9 @@ layout: default
                         <h2>Elliot Lunn</h2>
                         <p>I believe that design has the possibility to solve some of the world's most challenging problems. With society's constantly increasing consumption despite the decline in availability of materials it is important for designers to consider where their products come from and where they will end up.</p>
 
-                        <p>I am a maker at heart; this activity led me to design. I have always been fascinated by the way things work and how I could make and improve things for myself. This compulsion to make drives my desire to learn. I am preoccupied by the materials and manufacturing processes for making physical objects: CAD softwares for visualising my ideas to coding for creating my work websites. I am a designer who has acquired a sound range of skills, drawing on these for intelligent and well made design.</p>
+                        <p>I am a maker at heart; this activity led me to design. I have always been fascinated by the way things work and how I could make and improve things for myself. This compulsion to make drives my desire to learn. I am preoccupied by the materials and manufacturing processes for making physical objects, from CAD softwares for visualising my ideas to coding for creating my work websites. I am a designer who has acquired a sound range of skills, drawing on these for intelligent and well made design.</p>
 
-                        <p>I hope to continue to marry my passion for making and knowledge for sustainability to my design projects once I have left university.</p>
+                        <p>I hope to continue to marry my passion for making and knowledge on sustainability through my design projects once I have left university.</p>
                     </div>
                 </div>
             </div>
