--- a/profiles/john.html
+++ b/profiles/john.html
@@ -25,11 +25,11 @@ layout: default
                         </div>
                         <hr>
                         <h2>John Ragadio</h2>
-                        <p>Good design is one that aims to be sustainable yet functional to its core principle. It is a design that develops with the user through innovation and emotionally durability making it long lasting product.</p>
+                        <p>Good design is one that aims to be sustainable yet functional to its core principle. It is a design that develops with the user through innovation and emotional durability making a long lasting product.</p>
                         
-                        <p>I believe that form and function are one of the key aims for a product where details having a significant effect from the users. With this, my designs are driven by plenty of things which surrounds of as well as the wishes of my client. The current situation in the world also motivates my designs with the desire to design a product that helps both user and the environment, especially with the fast growing population and technological developments.</p>
+                        <p>I believe that form and function are the key aims for a product where details have a significant effect on the users. With this, my designs are driven by plenty of things which surround me, as well as the wishes of my client. The current situation in the world also motivates my designs with the desire to design a product that helps both user and the environment, especially considering the fast growing population and technological developments. </p>
                         
-                        <p>As a designer, my aspirations are to explore new places where design based on form and function shares the same passion as I have, alongside having a close designer/clientele relationship. This includes designing sustainably with the aim to reduce waste, from manufacture to disposal after use. </p>
+                        <p>As a designer, my aspirations are to explore new places that are passionate about design based on form and function, alongside having a close designer/clientele relationship. This includes designing sustainably with the aim to reduce waste, from manufacture through to disposal after use. </p>
                     </div>
                 </div>
             </div>
