--- a/profiles/ollie.html
+++ b/profiles/ollie.html
@@ -28,8 +28,8 @@ layout: default
                         <h2>Ollie Kidner </h2>
                         <p>Unfortunately the best designs are unobtrusive and almost unnoticed. I think designing a successful product is all about finding the perfect balance between form and function. Ultimately we design for consumers, so the end product must appeal to them on an aesthetic or functional level.</p>
                         
-                        <p>Normally I’m inspired by finding something that doesn't work very well, which prompts the question “why did somebody make this in the first place ?!” 
-                        Where  do you want to go as a designer? I love mountain biking and collecting and designing trainers, so something to do with either of them would be amazing!</p>
+                        <p>Normally I’m inspired by finding something that doesn't work very well, which prompts the question “why did somebody make this in the first place?!”</p>
+                        <p>I love mountain biking and collecting and designing trainers, so working somewhere to do with either of them would be amazing!</p>
                     </div>
                 </div>
             </div>
