--- a/profiles/yasmin.html
+++ b/profiles/yasmin.html
@@ -28,7 +28,7 @@ layout: default
                         <h2>Yasmin Banks</h2>
                         <p>I believe good design incorporates all three pillars of sustainability. As such, it is only the confluence of social, economic and environmental values that define a truly effective design.</p>
                         
-                        <p>Studying sustainable product design has not only heightened my admiration for the environment but has provided me with the skills necessary to collate this passion with a new found knowledge of the economic, social and environmental considerations essential for the pursuit of a future where sustainability is paramount.</p>
+                        <p>Studying sustainable product design has not only heightened my admiration for the environment but has also provided me with the skills necessary to collate this passion with a new found knowledge of the economic, social and environmental considerations essential for the pursuit of a future where sustainability is paramount.</p>
                         
                         <p>I am eager to start making a difference through design as I feel it is only by sustainably adapting the day-to-day products we use that an impact on our throw away consumerist society can be made.</p>
                     </div>
