--- a/who.html
+++ b/who.html
@@ -133,7 +133,7 @@ layout: default
                             </div>
                             
                             <div class="profile">
-                                <a href="{{site.baseurl}}/profiles/sky.html">
+                                <a href="{{site.baseurl}}/profiles/skye.html">
                                 <img src="{{site.baseurl}}images/profiles/sky.png" alt="profile picture" title="Sky"><h1>Skye</h1>
                                 </a>
                             </div>
