--- a/profiles/saxon.html
+++ b/profiles/saxon.html
@@ -25,7 +25,7 @@ layout: default
                             </div>
                         </div>
                         <hr>
-                        <h2>Saxson BrewerMarchant</h2>
+                        <h2>Saxon Brewer-Marchant</h2>
                         <p>I feel that good design should be socially, economically and environmentally aware. I feel that one is not just designing an object, there’s a responsibility to designing the whole user experience, from product purchase to end of life strategies. How the product engages with its target audience and more importantly how it engages with the natural world and sustainability.</p>
                         
                         <p>I am very much influenced by my surroundings. A close knit group of inspirational, creative thinkers enables creative juices to flow… and inspiration comes naturally.</p>
