--- a/who.html
+++ b/who.html
@@ -127,7 +127,7 @@ layout: default
                             </div>
                             
                             <div class="profile">
-                                <a href="{{site.baseurl}}/profiles/saxson.html">
+                                <a href="{{site.baseurl}}/profiles/saxon.html">
                                     <img src="{{site.baseurl}}images/profiles/saxson.png" alt="profile picture" title="Saxson"><h1>Saxon</h1>
                                 </a>
                             </div>
