--- a/who.html
+++ b/who.html
@@ -127,8 +127,8 @@ layout: default
                             </div>
                             
                             <div class="profile">
-                                <a href="{{site.baseurl}}/profiles/saxson.html">
-                                    <img src="{{site.baseurl}}images/profiles/saxson.png" alt="profile picture" title="Saxson"><h1>Saxon</h1>
+                                <a href="{{site.baseurl}}/profiles/saxon.html">
+                                    <img src="{{site.baseurl}}images/profiles/saxson.png" alt="profile picture" title="Saxon"><h1>Saxon</h1>
                                 </a>
                             </div>
                             
