--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ layout: default
                            <div class="homeImg">
                              <img src="{{site.baseurl}}/images/homepage/IMG_20171116_121758.jpg">
                            </div>
+                            <div class="homeImg">
+                                <a href="https://www.gofundme.com/spdlondon" target="_blank" title="gofundme"><img src="{{site.baseurl}}/images/homepage/gofundme%20website%20banner.png"></a>
+                           </div>
                         </div>
                         </div>
                     </div>
