--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@ layout: default
                         <div class="slideContainer">
                         <div id="slideshow">
                            <div class="homeImg">
-                               <a href="https://www.gofundme.com/spdlondon" target="_blank" title="gofundme"><img src="{{site.baseurl}}/images/homepage/c375e950035241.58c5d779bf9e0.jpg"></a>
+                               <a href="https://www.gofundme.com/spdlondon" target="_blank" title="Help us get to London!"><img src="{{site.baseurl}}/images/homepage/c375e950035241.58c5d779bf9e0.jpg"></a>
                            </div>
                            <div class="homeImg">
-                               <a href="https://www.gofundme.com/spdlondon" target="_blank" title="gofundme"><img src="{{site.baseurl}}/images/homepage/20171129_134556.jpg"></a>
+                               <a href="https://www.gofundme.com/spdlondon" target="_blank" title="Help us get to London!"><img src="{{site.baseurl}}/images/homepage/20171129_134556.jpg"></a>
                            </div>
                            <div class="homeImg">
-                               <a href="https://www.gofundme.com/spdlondon" target="_blank" title="gofundme"><img src="{{site.baseurl}}/images/homepage/IMG_1172-2.jpg"></a>
+                               <a href="https://www.gofundme.com/spdlondon" target="_blank" title="Help us get to London!"><img src="{{site.baseurl}}/images/homepage/IMG_1172-2.jpg"></a>
                            </div>
                            <div class="homeImg">
-                               <a href="https://www.gofundme.com/spdlondon" target="_blank" title="gofundme"><img src="{{site.baseurl}}/images/homepage/IMG_20171116_121758.jpg"></a>
+                               <a href="https://www.gofundme.com/spdlondon" target="_blank" title="Help us get to London!"><img src="{{site.baseurl}}/images/homepage/IMG_20171116_121758.jpg"></a>
                            </div>
                             <div class="homeImg">
-                                <a href="https://www.gofundme.com/spdlondon" target="_blank" title="gofundme"><img src="{{site.baseurl}}/images/homepage/gofundme%20website%20banner.png"></a>
+                                <a href="https://www.gofundme.com/spdlondon" target="_blank" title="Help us get to London!"><img src="{{site.baseurl}}/images/homepage/gofundme%20website%20banner.png"></a>
                            </div>
                         </div>
                         </div>
