--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="twelve columns">
+<!--
                         <div class="slideContainer">
                         <div id="slideshow">
                             <div class="homeImg">
@@ -24,6 +25,9 @@ layout: default
                            </div>
                         </div>
                         </div>
+-->
+                        <div class='embed-container'><iframe src='https://player.vimeo.com/video/265413276?autoplay=1&loop=1&autopause=0' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
+
                     </div>
                 </div>
             </div>
