--- a/profiles/ashu.html
+++ b/profiles/ashu.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/ash.png" alt="Ashu Profil Picture" title="Ashu">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/ash.jpg" alt="Ashu Profil Picture" title="Ashu">
                     </div>
                 </div> 
                 <div class="row">
