--- a/profiles/cassie.html
+++ b/profiles/cassie.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/cassie.png" alt="Cassie Profil Picture" title="Cassie">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/cassie.jpg" alt="Cassie Profil Picture" title="Cassie">
                     </div>
                 </div> 
                 <div class="row">
