--- a/profiles/charles.html
+++ b/profiles/charles.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/charlie.png" alt="Charles Profil Picture" title="Charles">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/charlie.jpg" alt="Charles Profil Picture" title="Charles">
                     </div>
                 </div> 
                 <div class="row">
