--- a/profiles/chloe.html
+++ b/profiles/chloe.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/chloe.png" alt="Chloe Profil Picture" title="Chlöe">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/chloe.jpg" alt="Chloe Profil Picture" title="Chlöe">
                     </div>
                 </div> 
                 <div class="row">
