--- a/profiles/connie.html
+++ b/profiles/connie.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/connie.png" alt="Connie Profil Picture" title="Connie">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/connie.jpg" alt="Connie Profil Picture" title="Connie">
                     </div>
                 </div> 
                 <div class="row">
