--- a/profiles/dan.html
+++ b/profiles/dan.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/dan.png" alt="Daniel Profil Picture" title="Daniel">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/dan.jpg" alt="Daniel Profil Picture" title="Daniel">
                     </div>
                 </div> 
                 <div class="row">
