--- a/profiles/elliot.html
+++ b/profiles/elliot.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/elliot.png" alt="Elliot Profil Picture" title="Elliot">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/elliot.jpg" alt="Elliot Profil Picture" title="Elliot">
                     </div>
                 </div> 
                 <div class="row">
