--- a/profiles/fran.html
+++ b/profiles/fran.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/fran.png" alt="Francesco Profil Picture" title="Francesco">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/fran.jpg" alt="Francesco Profil Picture" title="Francesco">
                     </div>
                 </div> 
                 <div class="row">
