--- a/profiles/jayden.html
+++ b/profiles/jayden.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/jayden.png" alt="Jayden Profil Picture" title="Jayden">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/jayden.jpg" alt="Jayden Profil Picture" title="Jayden">
                     </div>
                 </div> 
                 <div class="row">
