--- a/profiles/john.html
+++ b/profiles/john.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/john.png" alt="John Profil Picture" title="John">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/john.jpg" alt="John Profil Picture" title="John">
                     </div>
                 </div>
                 <div class="row">
