--- a/profiles/luke.html
+++ b/profiles/luke.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/luke.png" alt="Luke Profil Picture" title="luke">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/luke.jpg" alt="Luke Profil Picture" title="luke">
                     </div>
                 </div> 
                 <div class="row">
