--- a/profiles/saxon.html
+++ b/profiles/saxon.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/saxson.png" alt="Saxson Profil Picture" title="Saxson">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/saxson.jpg" alt="Saxson Profil Picture" title="Saxson">
                     </div>
                 </div> 
                 <div class="row">
