--- a/profiles/skye.html
+++ b/profiles/skye.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/sky.png" alt="Sky Profil Picture" title="Sky">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/sky.jpg" alt="Sky Profil Picture" title="Sky">
                     </div>
                 </div> 
                 <div class="row">
