--- a/profiles/stefan.html
+++ b/profiles/stefan.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/stefan.png" alt="Stefan Profil Picture" title="Stefan">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/stefan.jpg" alt="Stefan Profil Picture" title="Stefan">
                     </div>
                 </div> 
                 <div class="row">
