--- a/profiles/arthur.html
+++ b/profiles/arthur.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/arthur.png" alt="Arthur Profil Picture" title="Arthur">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/arthur.jpg" alt="Arthur Profil Picture" title="Arthur">
                     </div>
                 </div> 
                 <div class="row">
