--- a/profiles/drew.html
+++ b/profiles/drew.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/drew.png" alt="Drew Profil Picture" title="Drew">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/drew.jpg" alt="Drew Profil Picture" title="Drew">
                     </div>
                 </div> 
                 <div class="row">
