--- a/profiles/jeanet.html
+++ b/profiles/jeanet.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/jeanet.png" alt="Jeanet Profil Picture" title="Jeanet">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/jeanet.jpg" alt="Jeanet Profil Picture" title="Jeanet">
                     </div>
                 </div> 
                 <div class="row">
