--- a/profiles/ollie.html
+++ b/profiles/ollie.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/ollie.png" alt="Ollie Profil Picture" title="Ollie">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/ollie.jpg" alt="Ollie Profil Picture" title="Ollie">
                     </div>
                 </div> 
                 <div class="row">
