--- a/profiles/wiktoria.html
+++ b/profiles/wiktoria.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/wiktoria.png" alt="Wiktoria Profil Picture" title="Wiktoria">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/wiktoria.jpg" alt="Wiktoria Profil Picture" title="Wiktoria">
                     </div>
                 </div>
                 <div class="row">
