--- a/profiles/yasmin.html
+++ b/profiles/yasmin.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/yasmin.png" alt="Yasmin Profil Picture" title="Yasmin">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/yasmin.jpg" alt="Yasmin Profil Picture" title="Yasmin">
                     </div>
                 </div> 
                 <div class="row">
