--- a/profiles/charles.html
+++ b/profiles/charles.html
@@ -13,7 +13,7 @@ layout: default
                         <hr>
                             <div class="profileContact">
                             <p class="profileLinks"><nobr>Find me at:</nobr></p>
-                            <p class="profileLinks" ><nobr>charles.clarke@falmouth.ac.uk</nobr><p>
+                            <p class="profileLinks" ><nobr>Contact@chclarkedesign.com</nobr><p>
                             <p class="profileLinks"><a href="https://chclarkedesign.com/"><nobr>My Web Page</nobr></a></p>
                             <div class="profileLinks">
                                                             
