--- a/profiles/stu.html
+++ b/profiles/stu.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container">
                 <div class="row">
                     <div class="four columns">
-                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/stu.png" alt="stu Profil Picture" title="Stuart">
+                        <img class="profilePic" src="{{site.baseurl}}/images/profiles/stu.jpg" alt="stu Profil Picture" title="Stuart">
                     </div>
                 </div> 
                 <div class="row">
