--- a/sponsors.html
+++ b/sponsors.html
@@ -12,7 +12,10 @@ layout: default
                 </div>
                 <div class="row">
                     <div class="nine columns">
-                        <p>If you wish to help us get to New Designers, please get in <a href="{{site.baseurl}}/contact.html">contact.</a></p>
+                        <p>A big thank you to or spounsours! NewDesingers is a great opportunity but it expensive, we are funding our way to the show using our own money and with help from the companies shown below.</p>
+                    </div>
+                    <div class="row">
+                        <div class="three columns"><a href=""><img src="images/33429037_10156397146176565_4810877045313634304_n.jpg" title="stablere sources"></a></div>
                     </div>
                 </div>
             </div>
